--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
     
         <div class="tab-content" id="certificates">
             <div class="certificate-content">
-                <div class="card-certificate"> <img src="/Certificates/Python.jpg" class="certifi"></div>
+                <div class="card-certificate"> <img src="./Certificates/Python.JPG" class="certifi"></div>
                 <div class="card-certificate"><img src="\Users\bryan\OneDrive\Desktop\porforlio webiste\Certificates\Comscie.jpg" class="certifi"></div>
                 <div class="card-certificate">Full-Stack Development</div>
                 <div class="card-certificate"> <img src="\Users\bryan\OneDrive\Desktop\porforlio webiste\Certificates\Python.jpg" class="certifi"></div>
